set terminal png size 1920,1080
set output 'l.png'
set datafile separator ';'
set xlabel 'NOM DES VILLES'
set ylabel 'NOMBRES DE ROUTES'
set title 'Option -t'
set yrange [0:*]
set style fill solid
set boxwidth 0.5
set key font ",20"

plot 't.txt' using 2:xtic(1) title 'routes totales' with boxes, '' using 3:xtic(1) title 'première ville' with boxes
